--- a/style.css
+++ b/style.css
@@ -123,10 +123,27 @@ h4{
     height: 3px;
     background-color: #000;
 }
+    .innerAlert {
+        display: none;
+        position: fixed;
+        top: 10%;
+        background-color: red;
+        padding: 10px;
+        color: white;
+        text-align: center;
+        border-radius: 5px;
+        z-index: 1000;
+        font-size: 1em;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    }            
 
 @media (min-width:992px) and (max-width:1400px) {
     .about {
         margin-left: 95px;
+    }
+    .innerAlert {
+        width: 470px;
+        font-size: 1em;
     }
 }
 
@@ -147,9 +164,12 @@ h4{
     .change-button p {
         padding: 8px 0;
     }
+    .innerAlert {
+        font-size: 0.9em;
+    }
 }
 
-@media (min-width: 700px) and (max-width: 819px) {
+@media (min-width: 700px) and (max-width: 820px) {
     .about {
         font-size: .6em;
         margin-left: 0;
@@ -172,6 +192,9 @@ h4{
     }
     main {
         width: 685px;
+    }
+    .innerAlert {
+        font-size: 0.8em;
     }
 }
 
@@ -222,13 +245,16 @@ h4{
     }
 }
 
-@media (min-width:600px) and (max-width:699px) {
+@media (min-width:600px) and (max-width:700px) {
     .main-box {
         flex-direction: column;
         gap: 35px;
     }
     main {
         width: 600px;
+    }
+    .innerAlert {
+        font-size: 0.85em;
     }
 }
 @media (min-width:400px) and (max-width:600px) {
@@ -242,6 +268,9 @@ h4{
     h1 {
         font-size: 25px;
     }
+    .innerAlert {
+        font-size: 0.8em;
+    }
 }
 @media (min-width:320px) and (max-width:400px) {
     .main-box {
@@ -253,5 +282,8 @@ h4{
     }
     h1 {
         font-size: 22px;
+    }
+    .innerAlert {
+        font-size: 0.7em;
     }
 }
